<resources>
    <string name="app_name">KM Test</string>
    <string name="name">Name</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="palindrome">Palindrome</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="selected_user">Selected User</string>
    <string name="choose_user">Choose a User</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
</resources>